[gd_scene load_steps=2 format=3 uid="uid://c8y6vxe5xgj9d"]

[ext_resource type="Script" path="res://scenes/test/resource_manager_test.gd" id="1_yjnwc"]

[node name="ResourceManagerTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjnwc")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "资源管理器测试"
horizontal_alignment = 1

[node name="ResourceContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ResourceContainer"]
layout_mode = 2
columns = 5

[node name="ControlPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -300.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "资源控制"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="ResourceTypeContainer" type="HBoxContainer" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ControlPanel/VBoxContainer/ResourceTypeContainer"]
layout_mode = 2
text = "资源类型:"

[node name="ResourceTypeOption" type="OptionButton" parent="ControlPanel/VBoxContainer/ResourceTypeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CountContainer" type="HBoxContainer" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ControlPanel/VBoxContainer/CountContainer"]
layout_mode = 2
text = "数量:"

[node name="CountSpinBox" type="SpinBox" parent="ControlPanel/VBoxContainer/CountContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 100.0
value = 10.0

[node name="LoadResourcesButton" type="Button" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "加载资源"

[node name="UnloadResourcesButton" type="Button" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "卸载资源"

[node name="HSeparator2" type="HSeparator" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="PreloadContainer" type="HBoxContainer" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ControlPanel/VBoxContainer/PreloadContainer"]
layout_mode = 2
text = "预加载组:"

[node name="PreloadOption" type="OptionButton" parent="ControlPanel/VBoxContainer/PreloadContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PreloadGroupButton" type="Button" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "预加载资源组"

[node name="UnloadGroupButton" type="Button" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "卸载资源组"

[node name="InfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -300.0
offset_right = 300.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "资源信息"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="InfoPanel/VBoxContainer"]
layout_mode = 2

[node name="LoadedResourcesLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "已加载资源: 0"

[node name="CachedResourcesLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "缓存资源: 0"

[node name="MemoryUsageLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "内存使用: 0 MB"

[node name="LoadTimeLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "加载时间: 0 ms"

[node name="CacheHitsLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "缓存命中: 0"

[node name="CacheMissesLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "缓存未命中: 0"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "返回"
